Fix contribute intro layout on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     --amhs-column-padding: 2rem;
     --amhs-max-width: 1366px;
     --amhs-content-width: 980px;
+    --amhs-content-padding: 5%;
     --amhs-border-radius: 10px
 }
 
